# dzip_cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
cli/src/: config.rs
core/src/: error.rs  reader.rs  volume.rs
crates/cli/: Cargo.toml
crates/cli/src/: fs.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: codec.rs  compression.rs  constants.rs  error.rs  io.rs  lib.rs  list.rs  model.rs  pack.rs  types.rs  unpack.rs  utils.rs
src/: compression.rs  constants.rs  error.rs  lib.rs  main.rs  pack.rs  types.rs  unpack.rs  utils.rs
