[package]
name = "dzip-cli"
version = "0.1.0"
authors = ["Ed1th"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.1.7"
lzma-rs = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
bzip2 = "0.6.1"
